# llm-runtime-kit

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  SKILL.md  config_llm.yaml  pyproject.toml
.github/workflows/: ci.yml
src/llm_runtime_kit/: __init__.py  config.py  credentials.py  logging.py  output.py  retry.py  router.py  types.py
src/llm_runtime_kit/clients/: __init__.py  anthropic.py  base.py  ollama_native.py  openai_compatible.py
tests/: test_clients.py  test_config.py  test_credentials.py  test_output.py  test_retry.py  test_router.py  test_types.py
